--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,19 @@
 aiohappyeyeballs==2.4.0
 aiohttp==3.10.5
 aiosignal==1.3.1
+altair==5.4.1
 annotated-types==0.7.0
 anyio==4.4.0
 asttokens==2.4.1
 attrs==24.2.0
 backoff==2.2.1
+blinker==1.8.2
 boto3==1.35.10
 botocore==1.35.10
+cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
+click==8.1.7
 cohere==5.9.0
 comm==0.2.2
 dataclasses-json==0.6.7
@@ -22,6 +26,8 @@ fastavro==1.9.5
 filelock==3.15.4
 frozenlist==1.4.1
 fsspec==2024.6.1
+gitdb==4.0.11
+GitPython==3.1.43
 greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
@@ -32,24 +38,31 @@ idna==3.8
 ipykernel==6.29.5
 ipython==8.27.0
 jedi==0.19.1
+Jinja2==3.1.4
 jiter==0.5.0
 jmespath==1.0.1
 jsonpatch==1.33
 jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
 jupyter_client==8.6.2
 jupyter_core==5.7.2
-langchain==0.2.15
+langchain==0.3.0
 langchain-cohere==0.2.3
-langchain-community==0.2.15
-langchain-core==0.2.37
+langchain-community==0.3.0
+langchain-core==0.3.5
 langchain-experimental==0.0.64
-langchain-text-splitters==0.2.2
+langchain-text-splitters==0.3.0
 langfuse==2.45.2
-langsmith==0.1.108
+langsmith==0.1.125
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
 marshmallow==3.22.0
 matplotlib-inline==0.1.7
+mdurl==0.1.2
 multidict==6.0.5
 mypy-extensions==1.0.0
+narwhals==1.7.0
 nest-asyncio==1.6.0
 numpy==1.26.4
 openai==1.43.0
@@ -59,30 +72,41 @@ pandas==2.2.2
 parameterized==0.9.0
 parso==0.8.4
 pexpect==4.9.0
+pillow==10.4.0
 platformdirs==4.2.2
 prompt_toolkit==3.0.47
+protobuf==5.28.1
 psutil==6.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==17.0.0
 pydantic==2.8.2
+pydantic-settings==2.5.2
 pydantic_core==2.20.1
+pydeck==0.9.1
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.2
 pyzmq==26.2.0
+referencing==0.35.1
 regex==2024.7.24
 requests==2.32.3
+rich==13.8.1
+rpds-py==0.20.0
 s3transfer==0.10.2
 six==1.16.0
+smmap==5.0.1
 sniffio==1.3.1
 SQLAlchemy==2.0.32
 stack-data==0.6.3
+streamlit==1.38.0
 tabulate==0.9.0
 tenacity==8.5.0
 tiktoken==0.7.0
 tokenizers==0.20.0
+toml==0.10.2
 tornado==6.4.1
 tqdm==4.66.5
 traitlets==5.14.3
@@ -91,6 +115,7 @@ typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
+watchdog==4.0.2
 wcwidth==0.2.13
 wrapt==1.16.0
 yarl==1.9.7
