--- a/requirements.txt
+++ b/requirements.txt
@@ -47,11 +47,12 @@ jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 jupyter_client==8.6.2
 jupyter_core==5.7.2
-langchain==0.3.0
-langchain-cohere==0.2.3
-langchain-community==0.3.0
-langchain-core==0.3.5
-langchain-experimental==0.0.64
+langchain==0.3.1
+langchain-cohere==0.3.0
+langchain-community==0.3.1
+langchain-core==0.3.6
+langchain-experimental==0.3.1.post1
+langchain-openai==0.2.1
 langchain-text-splitters==0.3.0
 langfuse==2.45.2
 langsmith==0.1.125
