Update example .env

--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,6 @@ OPENAI_API_KEY=""
 COHERE_API_KEY=""
 
 # Langfuse
-ENDPOINT="http://localhost:3000"
+ENDPOINT="http://langfuse-server:3000"
 PUBLIC_KEY=""
 SECRET_KEY=""
