--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ backoff==2.2.1
 blinker==1.8.2
 boto3==1.35.10
 botocore==1.35.10
+bs4==0.0.2
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
@@ -55,6 +56,7 @@ langchain-experimental==0.3.1.post1
 langchain-openai==0.2.1
 langchain-text-splitters==0.3.0
 langfuse==2.45.2
+langgraph==0.2.32
 langsmith==0.1.125
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
