Initialize public key and secret key for handson env

--- a/.env.sample
+++ b/.env.sample
@@ -4,5 +4,5 @@ COHERE_API_KEY=""
 
 # Langfuse
 ENDPOINT="http://langfuse-server:3000"
-PUBLIC_KEY=""
-SECRET_KEY=""
+PUBLIC_KEY="pk-1234567890"
+SECRET_KEY="sk-1234567890"
