--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -7,9 +7,11 @@ anyio==4.4.0
 asttokens==2.4.1
 attrs==24.2.0
 backoff==2.2.1
+beautifulsoup4==4.12.3
 blinker==1.8.2
 boto3==1.35.10
 botocore==1.35.10
+bs4==0.0.2
 cachetools==5.5.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
@@ -19,6 +21,7 @@ comm==0.2.2
 dataclasses-json==0.6.7
 debugpy==1.8.5
 decorator==5.1.1
+defusedxml==0.7.1
 distro==1.9.0
 executing==2.1.0
 faiss-cpu==1.8.0.post1
@@ -55,12 +58,15 @@ langchain-experimental==0.3.1.post1
 langchain-openai==0.2.1
 langchain-text-splitters==0.3.0
 langfuse==2.45.2
+langgraph==0.2.32
+langgraph-checkpoint==2.0.0
 langsmith==0.1.125
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 marshmallow==3.22.0
 matplotlib-inline==0.1.7
 mdurl==0.1.2
+msgpack==1.1.0
 multidict==6.0.5
 mypy-extensions==1.0.0
 narwhals==1.7.0
@@ -87,7 +93,6 @@ pydantic_core==2.20.1
 pydeck==0.9.1
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.2
 pyzmq==26.2.0
@@ -100,9 +105,11 @@ s3transfer==0.10.2
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
+soupsieve==2.6
 SQLAlchemy==2.0.32
 stack-data==0.6.3
 streamlit==1.38.0
+streamlit-feedback==0.1.3
 tabulate==0.9.0
 tenacity==8.5.0
 tiktoken==0.7.0
@@ -118,5 +125,6 @@ tzdata==2024.1
 urllib3==2.2.2
 watchdog==4.0.2
 wcwidth==0.2.13
+wikipedia==1.4.0
 wrapt==1.16.0
 yarl==1.9.7
