--- a/compose.yml
+++ b/compose.yml
@@ -59,7 +59,7 @@ services:
   db:
     <<: *default_policy
     container_name: postgresql
-    image: postgres
+    image: postgres:17
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 3s
@@ -86,7 +86,7 @@ services:
     command: start-notebook.sh --NotebookApp.token='' --NotebookApp.disable_check_xsrf=True --port=8080 --notebook-dir=/home/jovyan/work
     environment:
       OPENAI_API_KEY: ${OPENAI_API_KEY}
-      COHERE_API_KEY: ${COHERE_API_KEY}    
+      COHERE_API_KEY: ${COHERE_API_KEY}
       JUPYTER_ENABLE_LAB: yes
       PUBLIC_KEY: pk-1234567890
       SECRET_KEY: sk-1234567890
