--- a/compose.yml
+++ b/compose.yml
@@ -77,7 +77,7 @@ services:
   jupyter:
     <<: *default_policy
     container_name: jupyter
-    image: jupyter/base-notebook
+    image: jupyter/base-notebook:python-3.11
     ports:
       - 8080:8080
     volumes:
